# web-speed-agent

./: .gitignore  LICENSE  README.md  agent_mcp_server.py  pyproject.toml
docs/: instructions.md  mcp-install.md
examples/: book_flight.py  price_monitor.py
tests/: test_agent.py  test_login_live.py
web_speed_agent/: __init__.py  agent.py  browser.py  config.py  credentials.py  exceptions.py  http_client.py  scrubber.py
