[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web-speed-agent"
version = "0.1.0"
description = "Local browser automation + Web Speed API integration for authenticated web extraction"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["web", "scraping", "extraction", "playwright", "ai", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "playwright>=1.40.0",
    "httpx>=0.24.0",
    "pyyaml>=6.0",
    "keyring>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
]

[project.urls]
Homepage = "https://getwebspeed.io"
Repository = "https://github.com/Dominic-Pi-Sunyer/web-speed-agent"
Issues = "https://github.com/Dominic-Pi-Sunyer/web-speed-agent/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
